_sass/_layout.scss
/******************************************************************************
 * Content
 ******************************************************************************/

@use "variables" as v;

body {
  padding-bottom: 70px;
  color: var(--global-text-color);
  background-color: var(--global-bg-color);
  font-family: "EB Garamond", Georgia, serif;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    scroll-margin-top: 66px;
  }
}

body.fixed-top-nav {
  // Add some padding for the nav-bar.
  padding-top: 57px;
}

body.sticky-bottom-footer {
  // Remove padding below footer.
  padding-bottom: 0;
}

.container {
  max-width: v.$max-content-width;
}

// Profile
.profile {
  img {
    width: 100%;
  }
}

// Content layout uses Bootstrap's grid system with responsive columns
// Main content flows naturally through container-mt-5 and Bootstrap grid classes
// See _layouts/default.liquid and _includes/projects.liquid for examples

/******************************************************************************
 * Publications
 ******************************************************************************/

// Publications layout is defined in _includes/bib_search.liquid
// Uses jekyll-scholar for BibTeX parsing and Bootstrap cards for display

/*****************************************************************************
* Projects
*****************************************************************************/

// TODO: redefine projects layout.

